--- a/html2.html
+++ b/html2.html
@@ -16,7 +16,7 @@
     <p>Cascading Style Sheets(CSS)는 HTML이나 XML(XML의 방언인 SVG, XHTML 포함)로 작성된 
     문서의 표시 방법을 기술하기 위한 스타일 시트 언어입니다. CSS는 요소가 화면, 종이, 음성이나 
     다른 매체 상에 어떻게 렌더링되어야 하는지 지정합니다.</p>
-    <P>오재경adfafddfsaf <u>use</u> adfadfadsf</P>
+    <P>adfafddfsaf <u>use</u> adfadfadsf</P>
     <img src="images.jpg" width="500">
     <P>adfadfadsfadfs <strong>adfadfa</strong>dfadfadf</P>
 </body>
