--- a/html1.html
+++ b/html1.html
@@ -14,7 +14,7 @@
     </ol>
     <h2>HTML이란 무엇일까요?</h1>
     <p><a href="https://www.w3schools.com/html/" target="_blank" title="HTML5 spec">Hypertxet Markup Language (HTMP)</a> dadfafdadffaadfadfadfafd</p>
-    <P>오재경adfafddfsaf <u>use</u> adfadfadsf</P>
+    <P>adfafddfsaf <u>use</u> adfadfadsf</P>
     <img src="images.jpg" width="500">
     <P>adfadfadsfadfs <strong>adfadfa</strong>dfadfadf</P>
 </body>
