--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ol>
     <h2>WEB이란 무엇일까요?</h1>
     <p>월드 와이드 웹(World Wide Web, WWW, W3)은 인터넷에 연결된 컴퓨터를 통해 사람들이 정보를 공유할 수 있는 전 세계적인 정보 공간을 말한다. </P>
-    <img src="image.gif" width="500">
+    <img src="images.gif" width="500">
     <P>adfadfadsfadfs <strong>adfadfa</strong>dfadfadf</P>
 </body>
 </html>
